--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
+    "axios": "^1.13.2",
     "codemirror": "^5.65.15",
+    "konva": "^10.0.12",
     "react": "^19.1.1",
     "react-avatar": "^5.0.4",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
+    "react-konva": "^19.2.1",
     "react-router-dom": "^7.9.5",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.17",
